update core components

--- a/src/main/resources/web/welcome.html
+++ b/src/main/resources/web/welcome.html
@@ -3,12 +3,26 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="./web/favicon.ico" rel="icon" type="image/x-icon">
-    <link href="./web/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/web/favicon.ico" rel="icon" type="image/x-icon">
+    <link href="/web/css/bootstrap.min.css" rel="stylesheet">
     <title>Welcome to JFWF framework</title>
 </head>
 <body>
 <h1>Hello, world!</h1>
 <script src="/web/js/bootstrap.bundle.min.js"></script>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            Column
+        </div>
+        <div class="col text-center">
+            <p>Column</p>
+        </div>
+        <div class="col">
+            Column
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
